Fixed js for light dark mode

--- a/style.css
+++ b/style.css
@@ -127,3 +127,10 @@ ul:hover {
   background-color: oklch(from var(--color-accent) 95% 5% h);
   padding-bottom: 0.2em;
 }
+
+.color-scheme {
+  position: absolute; 
+  top: 1rem;          
+  right: 1rem;        
+  font-size: 80%;     
+}
